Docker Improvements (#32)
* Build the application using the maven docker image (no longer need to compile the app locally).

Use the Amazon Corretto JDK distro for the JRE source.  (OpenJDK has been deprecated).  Create the small JRE using the jlink tool.

Using the alpine distro as base; copy the generated JRE; copy the built application.

* Add dockerignore and fix volume